--- a/src/app/careers/careers.component.html
+++ b/src/app/careers/careers.component.html
@@ -1,5 +1,5 @@
 <div class="my-jobs-container">
-  <h2>My Jobs</h2>
+  <h2>Careers</h2>
 
   <div class="jobs-grid" *ngIf="jobs.length > 0; else noJobs">
     <div class="job-card" *ngFor="let job of jobs">
