--- a/src/app/components/admin-components/view-enquiries/view-enquiries.component.html
+++ b/src/app/components/admin-components/view-enquiries/view-enquiries.component.html
@@ -1,48 +1,34 @@
-<div class="form-wrapper" id="demo-form">
-    <h2>Send us an enquiry</h2>
-    <form [formGroup]="enquiryForm" (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label>Organization Name</label>
-        <input type="text" formControlName="orgName" />
-      </div>
-  
-      <div class="form-group">
-        <label>Email</label>
-        <input type="email" formControlName="email" />
-      </div>
-  
-      <div class="form-group">
-        <label>Phone</label>
-        <input type="text" formControlName="phone" />
-      </div>
-  
-      <div class="form-group">
-        <label>Required Tech Stack</label>
-        <div formArrayName="reqTechStack">
-          <div *ngFor="let tech of reqTechStack.controls; let i = index">
-            <input [formControlName]="i" placeholder="Technology" />
-            <button type="button" (click)="removeTech(i)" *ngIf="reqTechStack.length > 1">Remove</button>
-          </div>
-        </div>
-        <button type="button" (click)="addTech()">Add Technology</button>
-      </div>
-  
-      <div class="form-group">
-        <label>Address</label>
-        <input type="text" formControlName="address" />
-      </div>
-  
-      <div class="form-group">
-        <label>City</label>
-        <input type="text" formControlName="city" />
-      </div>
-  
-      <div class="form-group">
-        <label>Description</label>
-        <textarea formControlName="description"></textarea>
-      </div>
-  
-      <button type="submit">Submit</button>
-    </form>
-  </div>
-  
+<div class="p-4">
+  <h2 class="text-xl font-bold mb-4">Enquiries</h2>
+
+  <!-- <input
+    type="text"
+    placeholder="Search enquiries..."
+    [(ngModel)]="searchQuery"
+    (input)="onSearch()"
+    class="border p-2 w-full mb-4"
+  /> -->
+
+  <table class="w-full border">
+    <thead class="bg-gray-200">
+      <tr>
+        <th class="p-2 text-left">Org Name</th>
+        <th class="p-2 text-left">Email</th>
+        <th class="p-2 text-left">Phone</th>
+        <th class="p-2 text-left">City</th>
+        <th class="p-2 text-left">Service</th>
+        <th class="p-2 text-left">Tech Stack</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let enquiry of filteredEnquirys">
+        <td class="p-2">{{ enquiry.orgName }}</td>
+        <td class="p-2">{{ enquiry.email }}</td>
+        <td class="p-2">{{ enquiry.phone }}</td>
+        <td class="p-2">{{ enquiry.city }}</td>
+        <td class="p-2">{{ enquiry.service }}</td>
+        <td class="p-2">{{ enquiry.reqTechStack.join(', ') }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
