applicant backenmostly working

--- a/src/app/components/admin-components/view-applications/view-applications.component.html
+++ b/src/app/components/admin-components/view-applications/view-applications.component.html
@@ -1,13 +1,13 @@
 <div class="p-4">
     <h2 class="text-xl font-bold mb-4">Applicants</h2>
   
-    <input
+    <!-- <input
       type="text"
       placeholder="Search applicants..."
       [(ngModel)]="searchQuery"
       (input)="onSearch()"
       class="border p-2 w-full mb-4"
-    />
+    /> -->
   
     <table class="w-full border">
       <thead class="bg-gray-200">
